; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-template.c_free_chunk.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-template.c_free_chunk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.chunk = type { i32, i32, i32 }

@FLAGS_NO_FREE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.chunk*)* @free_chunk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_chunk(%struct.chunk* %0) #0 {
  %2 = alloca %struct.chunk*, align 8
  store %struct.chunk* %0, %struct.chunk** %2, align 8
  %3 = load %struct.chunk*, %struct.chunk** %2, align 8
  %4 = icmp ne %struct.chunk* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %34

6:                                                ; preds = %1
  %7 = load %struct.chunk*, %struct.chunk** %2, align 8
  %8 = getelementptr inbounds %struct.chunk, %struct.chunk* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @FLAGS_NO_FREE, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %6
  br label %34

14:                                               ; preds = %6
  %15 = load %struct.chunk*, %struct.chunk** %2, align 8
  %16 = getelementptr inbounds %struct.chunk, %struct.chunk* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  switch i32 %17, label %34 [
    i32 132, label %18
    i32 137, label %18
    i32 130, label %18
    i32 129, label %18
    i32 128, label %18
    i32 135, label %18
    i32 134, label %18
    i32 133, label %19
    i32 131, label %19
    i32 138, label %24
    i32 136, label %29
  ]

18:                                               ; preds = %14, %14, %14, %14, %14, %14, %14
  br label %34

19:                                               ; preds = %14, %14
  %20 = load %struct.chunk*, %struct.chunk** %2, align 8
  %21 = getelementptr inbounds %struct.chunk, %struct.chunk* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @free(i32 %22)
  br label %34

24:                                               ; preds = %14
  %25 = load %struct.chunk*, %struct.chunk** %2, align 8
  %26 = getelementptr inbounds %struct.chunk, %struct.chunk* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @lwan_strbuf_free(i32 %27)
  br label %34

29:                                               ; preds = %14
  %30 = load %struct.chunk*, %struct.chunk** %2, align 8
  %31 = getelementptr inbounds %struct.chunk, %struct.chunk* %30, i32 0, i32 2
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @lwan_tpl_free(i32 %32)
  br label %34

34:                                               ; preds = %5, %13, %14, %29, %24, %19, %18
  ret void
}

declare dso_local i32 @free(i32) #1

declare dso_local i32 @lwan_strbuf_free(i32) #1

declare dso_local i32 @lwan_tpl_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
